# GigaLinks_backend

./: .env  .env.example  README.md  main.py  pyproject.toml  requirements.txt  seed_admin.py
app/: __init__.py  db.py  main.py
app/api/: auth.py  deps.py  inquiries.py  media.py  projects.py  services.py
app/auth/: jwt.py
app/core/: config.py
app/middleware/: security.py
app/models/: inquiry.py  project.py  service.py  user.py
tests/: test_basic.py
