[project]
name = "gigalinks-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"fastapi>=0.100.0",
	"uvicorn[standard]>=0.22.0",
	"motor>=3.7.1,<4",
	"python-jose[cryptography]>=3.3.0",
	"passlib[bcrypt]>=1.7.4,<1.8",
	"python-dotenv>=1.0.0",
	"cloudinary>=1.33.0",
	"email-validator>=1.3.0",
	"python-multipart>=0.0.30",
	"slowapi>=0.1.9",
]
 
[tool.slowapi]
default_limit = "10/minute"
